refactored controllers test